# python-news-scraper

./: .gitignore  README.md  backup_db.py  pyproject.toml
src/python_news_scraper/: __init__.py  main.py
src/python_news_scraper/api/routes/: articles.py  nlp.py  search.py
src/python_news_scraper/api/services/: scraping_service.py
src/python_news_scraper/api/services/nlp/: __init__.py  advanced_search.py  czech_nlp.py  nlp_service.py
src/python_news_scraper/api/services/scraping/: base.py
src/python_news_scraper/api/services/scraping/modules/: aktualne.py  blesk.py  ct24.py  denik.py  e15.py  forum24.py  idnes.py  ihned.py  irozhlas.py  lidovky.py  novinky.py  seznamzpravy.py
src/python_news_scraper/core/: database.py  logging_handler.py  migration.py  models.py  scheduler.py  task_queue.py
src/python_news_scraper/templates/: advanced_search.html  articles_list.html  base.html  index.html  scrape_result.html  topic_analysis.html
