[project]
name = "python-news-scraper"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Tadeas Fort", email = "business@tadeasfort.com" }]
dependencies = [
    "fastapi[standard]>=0.116.1",
    "camoufox[geoip]>=0.4.11",
    "sqlmodel>=0.0.18",
    "aiosqlite>=0.21.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10.4",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "python-dateutil>=2.9.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    # NLP dependencies
    "spacy>=3.8.7",
    "transformers>=4.54.1",
    "sentence-transformers>=5.0.0",
    "scikit-learn>=1.7.1",
    "textdistance>=4.6.3",
    "numpy>=1.24.0",
    "torch>=2.7.1",
    # Czech language support
    "unidecode>=1.4.0",
    "protobuf>=6.31.1",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "GPL-3.0" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.rye]
managed = true
dev-dependencies = []
